--- a/02_projects/ghw-ml-2025/notebooks/exploration.ipynb
+++ b/02_projects/ghw-ml-2025/notebooks/exploration.ipynb
@@ -920,6 +920,40 @@
     "df.info()\n",
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07d8032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "import pandas as pd\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "def preprocess_data(df: pd.DataFrame, target_cols: list[str]):\n",
+    "  X = df.drop(columns=target_cols)\n",
+    "\n",
+    "  numeric_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "  categorical_features = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "\n",
+    "  numeric_pipeline = SimpleImputer(strategy='median')\n",
+    "  categorical_pipline = OneHotEncoder(handle_unknown='ignore')\n",
+    "\n",
+    "  preprocessor = ColumnTransformer(\n",
+    "      transformers=[\n",
+    "          ('num', StandardScaler(), num_cols),\n",
+    "          ('cat', categorical_pipline, cat_cols)  \n",
+    "      ]\n",
+    "  )\n",
+    "\n",
+    "  joblib.dump(preprocessor, \"models/preprocessor.joblib\")\n",
+    "\n",
+    "  return preprocessor, X;"
+   ]
   }
  ],
  "metadata": {
